@@ -13,6 +13,11 @@ release 0.7 (2008-04-18)
     The Object instances must support the toString method.
   - Support message body writer for javax.ws.rs.core.StreamingOutput.
   - Support message body reader/writer for java.io.Reader.
+  - Support message body reader/writer for javax.xml.transform.Source
+    Only the following Java types are supported for reading:
+      - javax.xml.transform.stream.StreamSource
+      - javax.xml.transform.sax.SAXSource
+      - javax.xml.transform.dom.DOMSource
 
 release 0.6.1 (2008-03-18)
 - Support for xml attributes serialization/deserialization in JSON added
